<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pref_screen">

    <PreferenceCategory
        android:enabled="true"
        android:key="@string/pref_category_key_camera"
        android:title="@string/pref_category_title_camera">

        <ListPreference
            android:key="@string/pref_key_rear_camera_preview_size"
            android:persistent="true"
            android:title="@string/pref_title_rear_camera_preview_size" />

        <ListPreference
            android:key="@string/pref_key_front_camera_preview_size"
            android:persistent="true"
            android:title="@string/pref_title_front_camera_preview_size" />

        <ListPreference
            android:key="@string/pref_key_camerax_rear_camera_target_resolution"
            android:persistent="true"
            android:title="@string/pref_title_camerax_rear_camera_target_resolution" />

        <ListPreference
            android:key="@string/pref_key_camerax_front_camera_target_resolution"
            android:persistent="true"
            android:title="@string/pref_title_camerax_front_camera_target_resolution" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_camera_live_viewport"
            android:persistent="true"
            android:summary="@string/pref_summary_camera_live_viewport"
            android:title="@string/pref_title_camera_live_viewport" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_general_display">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_brief_answer_display"
            android:persistent="true"
            android:summary="@string/pref_summary_brief_answer_display"
            android:title="@string/pref_title_brief_answer_display" />

        <ListPreference
            android:defaultValue="12"
            android:entries="@array/pref_entries_quiz_overlay_text_size"
            android:entryValues="@array/pref_entry_values_quiz_overlay_text_size"
            android:key="@string/pref_key_quiz_overlay_text_size"
            android:persistent="true"
            android:title="@string/pref_title_quiz_overlay_text_size" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_show_text_confidence"
            android:persistent="true"
            android:summary="@string/pref_summary_show_text_confidence"
            android:title="@string/pref_title_show_text_confidence" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_text_recognition">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_group_recognized_text_in_blocks"
            android:persistent="true"
            android:summary="@string/pref_summary_group_recognized_text_in_blocks"
            android:title="@string/pref_title_group_recognized_text_in_blocks" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_merge_ocr_text_across_blocks"
            android:persistent="true"
            android:summary="@string/pref_summary_merge_ocr_text_across_blocks"
            android:title="@string/pref_title_merge_ocr_text_across_blocks" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_clean_ocr_question_text"
            android:persistent="true"
            android:summary="@string/pref_summary_clean_ocr_question_text"
            android:title="@string/pref_title_clean_ocr_question_text" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_short_ocr_option_support"
            android:persistent="true"
            android:summary="@string/pref_summary_short_ocr_option_support"
            android:title="@string/pref_title_short_ocr_option_support" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_screen_search">

        <ListPreference
            android:defaultValue="750"
            android:entries="@array/pref_entries_screen_search_interval"
            android:entryValues="@array/pref_entry_values_screen_search_interval"
            android:key="@string/pref_key_screen_search_interval_ms"
            android:persistent="true"
            android:title="@string/pref_title_screen_search_interval" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_screen_search_detect_changes"
            android:persistent="true"
            android:summary="@string/pref_summary_screen_search_detect_changes"
            android:title="@string/pref_title_screen_search_detect_changes" />

        <ListPreference
            android:defaultValue="0.02"
            android:entries="@array/pref_entries_screen_page_change_threshold"
            android:entryValues="@array/pref_entry_values_screen_page_change_threshold"
            android:key="@string/pref_key_screen_page_change_threshold"
            android:persistent="true"
            android:summary="@string/pref_summary_screen_page_change_threshold"
            android:title="@string/pref_title_screen_page_change_threshold" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_screen_search_show_answer_frames"
            android:persistent="true"
            android:summary="@string/pref_summary_screen_search_show_answer_frames"
            android:title="@string/pref_title_screen_search_show_answer_frames" />

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/pref_entries_screen_capture_frame_rate"
            android:entryValues="@array/pref_entry_values_screen_capture_frame_rate"
            android:key="@string/pref_key_screen_capture_frame_rate"
            android:persistent="true"
            android:title="@string/pref_title_screen_capture_frame_rate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_accessibility_search">

        <ListPreference
            android:defaultValue="250"
            android:entries="@array/pref_entries_screen_search_interval"
            android:entryValues="@array/pref_entry_values_screen_search_interval"
            android:key="@string/pref_key_accessibility_search_interval_ms"
            android:persistent="true"
            android:title="@string/pref_title_accessibility_search_interval" />

    </PreferenceCategory>

</PreferenceScreen>
