<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:icon="@drawable/icon_sort_24px"
        android:orderInCategory="90"
        android:title="@string/sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings_hub"
        android:icon="@drawable/icon_switches_24px"
        android:orderInCategory="95"
        android:title="@string/settings_hub_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/round_more_horiz_24"
        android:orderInCategory="100"
        android:title="more"
        app:showAsAction="always">
        <menu>
            <group android:id="@+id/group_select">
                <item
                    android:id="@+id/select"
                    android:icon="@drawable/round_check_circle_outline_24"
                    android:iconTint="?attr/colorOnSurfaceVariant"
                    android:iconTintMode="src_in"
                    android:orderInCategory="10"
                    android:title="@string/select"
                    app:showAsAction="never" />
            </group>

            <group android:id="@+id/group_test">
                <item
                    android:id="@+id/camera_test"
                    android:icon="@drawable/round_bug_report_24"
                    android:iconTint="?attr/colorOnSurfaceVariant"
                    android:iconTintMode="src_in"
                    android:orderInCategory="100"
                    android:title="@string/processor_test"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/screen_test"
                    android:icon="@drawable/round_bug_report_24"
                    android:iconTint="?attr/colorOnSurfaceVariant"
                    android:iconTintMode="src_in"
                    android:orderInCategory="100"
                    android:title="@string/screen_test"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/about"
                    android:icon="@drawable/round_info_24"
                    android:iconTint="?attr/colorOnSurfaceVariant"
                    android:iconTintMode="src_in"
                    android:orderInCategory="100"
                    android:title="@string/about"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>
